--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -27,6 +27,7 @@
 @import 'modules/heroText';
 @import 'modules/home';
 @import 'modules/latestWork';
+@import 'modules/modal';
 @import 'modules/siteNavigation';
 @import 'modules/work';
 @import 'modules/animation';
