--- a/_sass/general/variables.scss
+++ b/_sass/general/variables.scss
@@ -13,7 +13,10 @@ $blue:              #4e8cb1;
 $blue_dark:         #326a8c;
 $blue_light:        #829dad;
 $blue_lightest:     #f7f9fa;
+$yellow:            #ffd200;
 
+// $blue:              #3089ED;
+$blue: #39b3e5;
 // Rhythm
 
 // Typography
