--- a/_sass/modules/work.scss
+++ b/_sass/modules/work.scss
@@ -12,7 +12,7 @@
 	background-color: $off_white;
 	background-size: cover;
 	background-position: top center;
-	box-shadow: 0 2px 5px rgba(black, 0.05), 0 14px 54px rgba(black, 0.15);
+	box-shadow: 0 2px 5px rgba(black, 0.05), 0 0.5em 3em -1em rgba(black, 0.3);
 	height: 50vh;
 }
 .m-work-title {
