Add contact me form

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
 	{% include head.html %}
 
 	<body {% if page.body-id %}id="{{ page.body-id }}"{% endif %}>
+	
+		{% include contact.html %}
 
 		{% include header.html %}
 		
