--- a/_sass/general/variables.scss
+++ b/_sass/general/variables.scss
@@ -16,7 +16,12 @@ $blue_lightest:     #f7f9fa;
 $yellow:            #ffd200;
 
 // $blue:              #3089ED;
-$blue: #39b3e5;
+$blue:              #39b3e5;
+$green:             #56c080;
+$red:               #c05680;
+
+// Inputs
+$blue-inputUnderline: #9bd8f1;
 // Rhythm
 
 // Typography
