--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
 			<a class="m-siteNavigation-link {% if page.siteNav == 'blog' %}active{% endif %}" href="{{ site.baseurl }}/design-solutions">Blog</a>
 		</li>
 		<li>
-			<a class="m-siteNavigation-highlight" href="mailto:{{site.email}}">Contact Me</a>
+			<a id="contactMe-openModal" class="m-siteNavigation-highlight">Contact Me</a>
 		</li>
 	</ul>
 
