--- a/_sass/components/input.scss
+++ b/_sass/components/input.scss
@@ -4,7 +4,14 @@
 	margin-left: -3rem;
 	margin-right: -3rem;
 }
+.m-form-title {
+	line-height: 1;
+	font-weight: bold;
+	text-align: center;
+	color: white;
+}
 .m-form-table {
+	margin-top: 0.75rem;
 	display: table;
 	width: 100%;
 }
@@ -16,7 +23,7 @@
 .m-form-cell--btn {
 	padding-left: 1rem;
 	position: relative;
-	top: 1px;
+	top: 2px;
 }
 
 .m-input-wrapper {
@@ -24,22 +31,26 @@
 		margin-top: 0;
 	}
 	&.is-focused {
-		input,
-		textarea {
-			border-bottom-color: rgba(white, 0.8);
-			box-shadow: 0 1px 0 rgba(white, 0.8);
-		}
 		.m-input-label {
-			opacity: 0.9;
+			color: rgba(white, 0.85);
 		}
+		.m-input:after {
+			left: 0;
+			@include prefix(transition, left 0.1s);
+		}
+		.m-input-label:after,
 		.m-input-placeholder {
-			opacity: 0;
+			right: 100%;
+			@include prefix(transition, right 0.1s);
 		}
 	}
 }
 .is-notEmpty {
 	.m-input-label {
-		opacity: 0.5;
+		color: rgba(white, 0.5);
+		&:after {
+			right: 100%;
+		}
 	}
 	.m-input-placeholder {
 		display: none;
@@ -64,19 +75,31 @@ input,
 textarea {
 	display: block;
 	width: 100%;
-	line-height: 1.3;
 	background: none;
 	border: none;
 
-	padding: 0 4px;
+	padding: 0 4px 1px;
 	box-shadow: 0 1px 0 transparent;
-	border-bottom: 1px solid rgba(white, 0.5);
+	border-bottom: 1px solid $blue-inputUnderline;
 
 	color: white;
-	@include prefix(transition, all 0.25s);
+	&:-webkit-autofill {
+		-webkit-text-fill-color: white;
+	    -webkit-box-shadow: 0 0 0 100px $blue inset;
+	}
 }
 .m-input {
 	position: relative;
+	&:after {
+		content: '';
+		display: block;
+		position: absolute;
+		left: 100%;
+		right: 0;
+		bottom: -1px;
+		height: 2px;
+		background: rgba(white, 0.75);
+	}
 }
 input,
 textarea,
@@ -86,20 +109,35 @@ textarea,
 	cursor: pointer;
 }
 .m-input-label {
+	position: relative;
 	display: block;
 	font-size: 14px;
-	color: white;
-	opacity: 0;
-	line-height: 1.3;
-	@include prefix(transition, opacity 0.25s);
+	line-height: 1;
+	color: rgba(white, 0.85);
+	&:after {
+		content: '';
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: -2px;
+		background: $blue;
+	}
+	margin-bottom: -2px;
+	background: $blue;
+	z-index: 1;
 }
 .m-input-placeholder {
 	position: absolute;
-	top: -2px;
+	top: 0;
 	left: 4px;
-	color: white;
-	opacity: 0.35;
-	@include prefix(transition, opacity 0.25s);
+	right: 4px;
+	bottom: 1px;
+	color: rgba(white, 0.35);
+	background: $blue;
+	white-space: nowrap;
+	overflow: hidden;
 }
 .m-input-error {
 	display: none;
@@ -107,34 +145,23 @@ textarea,
 	color: $yellow;
 	font-size: 12px;
 	font-weight: bold;
+	line-height: 1;
 }
 
 ::-webkit-input-placeholder {
-	transition: color 0.25s;
-	color: $blue;
-}
-::-moz-placeholder {
-	transition: color 0.25s;
-	color: $blue;
-}
-:-ms-input-placeholder {  
-	transition: color 0.25s;
-	color: $blue;
-}
-
-.m-input-wrapper.is-focused ::-webkit-input-placeholder {
 	color: rgba(white, 0.35);
 }
-.m-input-wrapper.is-focused ::-moz-placeholder {
-	color: rgba(white, 0.35);  
+::-moz-placeholder {
+	color: rgba(white, 0.35);
 }
-.m-input-wrapper.is-focused :-ms-input-placeholder {  
-	color: rgba(white, 0.35);  
+:-ms-input-placeholder {  
+	color: rgba(white, 0.35);
 }
 
 @media (max-width: 767px) {
 	.m-input-label {
 		font-size: 12px;
+		margin-bottom: 0;
 	}
 	.m-input-error {
 		font-size: 10px;
