add newsletter signup form

--- a/_sass/general/variables.scss
+++ b/_sass/general/variables.scss
@@ -22,6 +22,7 @@ $red:               #c05680;
 
 // Inputs
 $blue-inputUnderline: #9bd8f1;
+$blue-inputUnderline--highlight: #c8ecfb;
 // Rhythm
 
 // Typography
