--- a/_sass/modules/input.scss
+++ b/_sass/modules/input.scss
@@ -1,31 +1,3 @@
-.m-form {
-
-	background: $blue;
-	margin-left: -3rem;
-	margin-right: -3rem;
-}
-.m-form-title {
-	line-height: 1;
-	font-weight: bold;
-	text-align: center;
-	color: white;
-}
-.m-form-table {
-	margin-top: 0.75rem;
-	display: table;
-	width: 100%;
-}
-.m-form-cell {
-	display: table-cell;
-	vertical-align: bottom;
-	width: 100%;
-}
-.m-form-cell--btn {
-	padding-left: 1rem;
-	position: relative;
-	top: 2px;
-}
-
 .m-input-wrapper {
 	* + * {
 		margin-top: 0;
@@ -105,7 +77,7 @@ textarea {
 		right: 0;
 		bottom: -1px;
 		height: 2px;
-		background: rgba(white, 0.75);
+		background: $blue-inputUnderline--highlight;
 	}
 }
 input,
