newsletter signup fix for iOS

--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,23 +1,25 @@
-<form class="m-form" action="//github.us10.list-manage.com/subscribe/post?u=15f6ef8e617910c50036c7ec3&amp;id=a980729ee7" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate>
-	<div class="container--xs pxadding">
-		<p class="m-form-title">Get emailed about design solutions. No spam, ever.</p>
+<section>
+	<form class="m-form" action="//github.us10.list-manage.com/subscribe/post?u=15f6ef8e617910c50036c7ec3&amp;id=a980729ee7" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate>
+		<div class="container--xs">
+			<p class="m-form-title">Get emailed about design solutions. No spam, ever.</p>
 
-		<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups--><div style="position: absolute; left: -5000px;"><input type="text" name="b_15f6ef8e617910c50036c7ec3_a980729ee7" tabindex="-1" value=""></div>
+			<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups--><div style="position: absolute; left: -5000px;"><input type="text" name="b_15f6ef8e617910c50036c7ec3_a980729ee7" tabindex="-1" value=""></div>
 
-		<div class="m-form-table">
-			<div class="m-form-cell">
-				<div class="m-input-wrapper">
-					<label class="m-input-label" for="mce-EMAIL">My email is</label>
-					<div class="m-input">
-						<label class="m-input-placeholder" for="mce-EMAIL">Email address</label>
-						<input id="mce-EMAIL" type="email" value="" name="EMAIL" class="required email" placeholder="email@domain.com">
+			<div class="m-form-table">
+				<div class="m-form-cell">
+					<div class="m-input-wrapper">
+						<label class="m-input-label" for="mce-EMAIL">My email is</label>
+						<div class="m-input">
+							<label class="m-input-placeholder" for="mce-EMAIL">Email address</label>
+							<input id="mce-EMAIL" type="email" value="" name="EMAIL" class="required email" placeholder="email@domain.com">
+						</div>
+						<label class="m-input-error" for="mce-EMAIL">Email address is required!</label>
 					</div>
-					<label class="m-input-error" for="mce-EMAIL">Email address is required!</label>
+				</div>
+				<div class="m-form-cell m-form-cell--btn">
+					<button class="btn btn--modal btn--sm" data-text="Subscribe" name="subscribe" id="mc-embedded-subscribe"></button>
 				</div>
 			</div>
-			<div class="m-form-cell m-form-cell--btn">
-				<button class="btn btn--modal btn--sm" data-text="Subscribe" name="subscribe" id="mc-embedded-subscribe">
-			</div>
 		</div>
-	</div>
-</form>
+	</form>
+</section>
