--- a/_sass/general/variables.scss
+++ b/_sass/general/variables.scss
@@ -30,7 +30,8 @@ $font_body:         "Soleil", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica,
 $font_header:       "futura-pt", "Futura PT", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;
 $font_serif:        "Charter", Georgia, serif;
 $font_size:         18px;
-$line_height:       1.5;
+$line_height:         1.5;
+$line_height--header: 1.1;
 $font_size--mobile: 15px;
 
 // Layout
