big update - allow links and buttons to flow onto two lines, upload new blog post, update new email address, add newsletter signup to bottom of each blog post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,13 +5,13 @@
 			<a class="m-siteNavigation-link {% if page.siteNav == 'home' %}active{% endif %}" href="{{ site.baseurl }}/">Home</a>
 		</li>
 		<li>
-			<a class="m-siteNavigation-link {% if page.siteNav == 'work' %}active{% endif %}" href="{{ site.baseurl }}/work">Work</a>
+			<a class="m-siteNavigation-link {% if page.siteNav == 'work' %}active{% endif %}" href="{{ site.baseurl }}/work/">Work</a>
 		</li>
 		<li>
-			<a class="m-siteNavigation-link {% if page.siteNav == 'about' %}active{% endif %}" href="{{ site.baseurl }}/about">About</a>
+			<a class="m-siteNavigation-link {% if page.siteNav == 'about' %}active{% endif %}" href="{{ site.baseurl }}/about/">About</a>
 		</li>
 		<li>
-			<a class="m-siteNavigation-link {% if page.siteNav == 'blog' %}active{% endif %}" href="{{ site.baseurl }}/design-solutions">Blog</a>
+			<a class="m-siteNavigation-link {% if page.siteNav == 'blog' %}active{% endif %}" href="{{ site.baseurl }}/design-solutions/">Blog</a>
 		</li>
 		<li>
 			<a id="contactMe-openModal" class="m-siteNavigation-highlight">Contact Me</a>
