--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,6 +1,6 @@
 <form class="m-form" action="//github.us10.list-manage.com/subscribe/post?u=15f6ef8e617910c50036c7ec3&amp;id=a980729ee7" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate>
 	<div class="container--xs">
-		<p class="m-form-title">Get emailed about design solutions. No spam, ever.</p>
+		<p class="m-form-title">Get emailed about design solutions.<br class="hidden--md-up"> No spam, ever.</p>
 
 		<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups--><div style="position: absolute; left: -5000px;"><input type="text" name="b_15f6ef8e617910c50036c7ec3_a980729ee7" tabindex="-1" value=""></div>
 
