--- a/_sass/general/variables.scss
+++ b/_sass/general/variables.scss
@@ -10,9 +10,8 @@ $off_white:         #eee;
 $yellow:            #fff200;
 $purple:            #675f87;
 $blue:              #4e8cb1;
-$blue_dark:         #326a8c;
-$blue_light:        #829dad;
-$blue_lightest:     #f7f9fa;
+$blue_dark:         #005d82;
+$blue_light:        #73c5e6;
 $yellow:            #ffd200;
 
 // $blue:              #3089ED;
