--- a/_sass/components/buttons.scss
+++ b/_sass/components/buttons.scss
@@ -7,40 +7,66 @@ button {
 	font-size: 1.5rem;
 	line-height: 1.1;
 	display: inline-block;
-	white-space: nowrap;
+	background: none;
 	color: $blue;
-	border-bottom: 3px solid rgba($blue, 0.5);
 	text-transform: none;
 	.no-touch &:hover,
 	.no-touch &:focus,
 	.touch &:active {
-		border-color: initial;
+		background: none;
+		color: $blue;
+		&:after {
+			background: -moz-linear-gradient(bottom,     transparent 0%, transparent 6%, $blue 6%, $blue 12%, transparent 12%, transparent 100%); /* FF3.6+ */
+			background: -webkit-linear-gradient(bottom,  transparent 0%, transparent 6%, $blue 6%, $blue 12%, transparent 12%, transparent 100%); /* Chrome10+,Safari5.1+ */
+			background: -o-linear-gradient(bottom,       transparent 0%, transparent 6%, $blue 6%, $blue 12%, transparent 12%, transparent 100%); /* Opera 11.10+ */
+			background: -ms-linear-gradient(bottom,      transparent 0%, transparent 6%, $blue 6%, $blue 12%, transparent 12%, transparent 100%); /* IE10+ */
+			background: linear-gradient(to top,          transparent 0%, transparent 6%, $blue 6%, $blue 12%, transparent 12%, transparent 100%); /* W3C */
+		}
 	}
 	&:before,
 	&:after {
 		content: attr(data-text);
 	}
 	&:before {
-		position: relative;
-		z-index: 1;
-	}
-	&:after {
 		position: absolute;
 		left: 0;
 		right: 0;
-		top: 0px;
+		top: 0;
+		z-index: 1;
+	}
+	&:after {
+		position: relative;
+		display: inline;
 		color: transparent;
+		background: -moz-linear-gradient(bottom,     transparent 0%, transparent 6%, rgba($blue, 0.5) 6%, rgba($blue, 0.5) 12%, transparent 12%, transparent 100%); /* FF3.6+ */
+		background: -webkit-linear-gradient(bottom,  transparent 0%, transparent 6%, rgba($blue, 0.5) 6%, rgba($blue, 0.5) 12%, transparent 12%, transparent 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(bottom,       transparent 0%, transparent 6%, rgba($blue, 0.5) 6%, rgba($blue, 0.5) 12%, transparent 12%, transparent 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(bottom,      transparent 0%, transparent 6%, rgba($blue, 0.5) 6%, rgba($blue, 0.5) 12%, transparent 12%, transparent 100%); /* IE10+ */
+		background: linear-gradient(to top,          transparent 0%, transparent 6%, rgba($blue, 0.5) 6%, rgba($blue, 0.5) 12%, transparent 12%, transparent 100%); /* W3C */
 		-webkit-text-stroke: 5px white;
 	}
-	&:visited {
+	&[data-visited] {
+		background: none;
 		color: inherit;
-		border-color: rgba($black_light, 0.33);
+		&:after {
+			background: -moz-linear-gradient(bottom,     transparent 0%, transparent 6%, rgba($black_light, 0.33) 6%, rgba($black_light, 0.33) 12%, transparent 12%, transparent 100%); /* FF3.6+ */
+			background: -webkit-linear-gradient(bottom,  transparent 0%, transparent 6%, rgba($black_light, 0.33) 6%, rgba($black_light, 0.33) 12%, transparent 12%, transparent 100%); /* Chrome10+,Safari5.1+ */
+			background: -o-linear-gradient(bottom,       transparent 0%, transparent 6%, rgba($black_light, 0.33) 6%, rgba($black_light, 0.33) 12%, transparent 12%, transparent 100%); /* Opera 11.10+ */
+			background: -ms-linear-gradient(bottom,      transparent 0%, transparent 6%, rgba($black_light, 0.33) 6%, rgba($black_light, 0.33) 12%, transparent 12%, transparent 100%); /* IE10+ */
+			background: linear-gradient(to top,          transparent 0%, transparent 6%, rgba($black_light, 0.33) 6%, rgba($black_light, 0.33) 12%, transparent 12%, transparent 100%); /* W3C */
+		}
 	}
 	&[disabled],
 	&.disabled {
 		cursor: default;
-		color: $gray;
-		border-color: rgba($gray, 0.5) !important;
+		color: $gray !important;
+		&:after {
+			background: -moz-linear-gradient(bottom,     transparent 0%, transparent 6%, rgba($gray, 0.5) 6%, rgba($gray, 0.5) 12%, transparent 12%, transparent 100%) !important; /* FF3.6+ */
+			background: -webkit-linear-gradient(bottom,  transparent 0%, transparent 6%, rgba($gray, 0.5) 6%, rgba($gray, 0.5) 12%, transparent 12%, transparent 100%) !important; /* Chrome10+,Safari5.1+ */
+			background: -o-linear-gradient(bottom,       transparent 0%, transparent 6%, rgba($gray, 0.5) 6%, rgba($gray, 0.5) 12%, transparent 12%, transparent 100%) !important; /* Opera 11.10+ */
+			background: -ms-linear-gradient(bottom,      transparent 0%, transparent 6%, rgba($gray, 0.5) 6%, rgba($gray, 0.5) 12%, transparent 12%, transparent 100%) !important; /* IE10+ */
+			background: linear-gradient(to top,          transparent 0%, transparent 6%, rgba($gray, 0.5) 6%, rgba($gray, 0.5) 12%, transparent 12%, transparent 100%) !important; /* W3C */
+		}
 		&:active {
 			top: 0;
 		}
@@ -51,14 +77,27 @@ button {
 }
 .btn--sm {
 	font-size: 1.25rem;
-	border-bottom-width: 2px;
 }
 .btn--modal {
 	color: white;
-	border-bottom-color: rgba(white, 0.5);
+	&:after {
+		background: -moz-linear-gradient(bottom,     transparent 0%, transparent 6%, rgba(white, 0.5) 6%, rgba(white, 0.5) 12%, transparent 12%, transparent 100%); /* FF3.6+ */
+		background: -webkit-linear-gradient(bottom,  transparent 0%, transparent 6%, rgba(white, 0.5) 6%, rgba(white, 0.5) 12%, transparent 12%, transparent 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(bottom,       transparent 0%, transparent 6%, rgba(white, 0.5) 6%, rgba(white, 0.5) 12%, transparent 12%, transparent 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(bottom,      transparent 0%, transparent 6%, rgba(white, 0.5) 6%, rgba(white, 0.5) 12%, transparent 12%, transparent 100%); /* IE10+ */
+		background: linear-gradient(to top,          transparent 0%, transparent 6%, rgba(white, 0.5) 6%, rgba(white, 0.5) 12%, transparent 12%, transparent 100%); /* W3C */
+	}
+	.no-touch &:focus,
 	.no-touch &:hover,
 	.touch &:active {
 		color: white;
+		&:after {
+			background: -moz-linear-gradient(bottom,     transparent 0%, transparent 6%, white 6%, white 12%, transparent 12%, transparent 100%); /* FF3.6+ */
+			background: -webkit-linear-gradient(bottom,  transparent 0%, transparent 6%, white 6%, white 12%, transparent 12%, transparent 100%); /* Chrome10+,Safari5.1+ */
+			background: -o-linear-gradient(bottom,       transparent 0%, transparent 6%, white 6%, white 12%, transparent 12%, transparent 100%); /* Opera 11.10+ */
+			background: -ms-linear-gradient(bottom,      transparent 0%, transparent 6%, white 6%, white 12%, transparent 12%, transparent 100%); /* IE10+ */
+			background: linear-gradient(to top,          transparent 0%, transparent 6%, white 6%, white 12%, transparent 12%, transparent 100%); /* W3C */
+		}
 	}
 	&:after {
 		-webkit-text-stroke: 5px $blue;
@@ -68,8 +107,10 @@ button {
 	display: block;
 	text-align: center;
 	padding: $rhythm * 5 0;
-	background: none;
-	border: none;
+	&,
+	&[data-visited] {
+		background: none;
+	}
 	@include prefix(transition, background 1s);
 	.btn {
 		margin-top: 0;
@@ -81,7 +122,9 @@ button {
 		}
 
 	}
-	&:hover {
+	.no-touch &:hover,
+	.no-touch &:focus,
+	.touch &:active {
 		background: $blue;
 		border: none;
 		.btn {
@@ -100,7 +143,9 @@ button {
 				display: none;
 			}
 		}
-		&:hover {
+		.no-touch &:hover,
+		.no-touch &:focus,
+		.touch &:active {
 			.btn-footer-image {
 				opacity: 1;
 			}
@@ -123,9 +168,9 @@ button {
 @media (max-width: 767px) {
 	.btn {
 		font-size: 1.2rem;
-		line-height: 1.15;
-		border-width: 2px;
+		line-height: 1.25;
 		&:after {
+			border-width: 2px;
 			-webkit-text-stroke: 4px white;
 		}
 	}
