--- a/_sass/general/typography.scss
+++ b/_sass/general/typography.scss
@@ -5,6 +5,7 @@ html {
 	color: $black_light;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 h1,
 .h1,
@@ -66,8 +67,8 @@ blockquote {
 	font-size: 1.25rem;
 	margin-left: -1.5rem;
 	padding: 0.75rem 1.5rem;
-	background: $blue_lightest;
-	color: $blue_light;
+	background: rgba($blue_light, 0.1);
+	color: $blue_dark;
 	border-left: 4px solid $blue_dark;
 	@include clearfix();
 }
