minor css and copy fixes

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,11 +21,11 @@ body-id: work
 		</div>
 
 		{% if page.siteNav == 'blog' %}
-			<section>
+			<section class="margin--lg">
 				{% include newsletter.html %}
 			</section>
 
-			<p class="container--sm">If you've got any alternative solutions to this problem, or want to suggest a new problem for me to tackle, please drop me a line at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.</p>
+			<p class="margin--lg container--sm">If you've got any alternative solutions to this problem, or want to suggest a new problem for me to tackle, please drop me a line at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.</p>
 		{% endif %}
 	</div>
 </div>
