--- a/_sass/modules/blogPost.scss
+++ b/_sass/modules/blogPost.scss
@@ -1,13 +1,6 @@
 .m-post-title {
 	font-size: 3rem;
 }
-.m-post-content {
-	* + h2,
-	* + h3,
-	* + h4 {
-		margin-top: $line_height * 1em / 2;
-	}
-}
 .m-post-quote {
 	padding-left: $rhythm;
 	font-style: italic;
@@ -61,6 +54,16 @@
 }
 .m-post-btn {
 	margin-top: 0;
+}
+
+@media (min-width: 1024px) {
+	.m-post-content {
+		* + h2,
+		* + h3,
+		* + h4 {
+			margin-top: $line_height * 1em / 2;
+		}
+	}
 }
 
 @media (max-width: 767px) {
