--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,8 @@
 		<meta property="og:type"             content="website">
 		<meta name="twitter:site"            content="{{ site.twitter_username }}">
 		<meta property="og:site_name"        content="Morgan Carter's Portfolio">
+		<meta property="og:url"              content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}/">
+		<link rel="canonical"                href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}/">
 	{% if page.image %}
 		<meta name="twitter:image"         content="{{ site.url }}/assets/images/{{ page.image }}">
 		<meta property="og:image"          content="{{ site.url }}/assets/images/{{ page.image }}">
@@ -35,7 +37,6 @@
 	{% endif %}
 
 	<link rel="stylesheet" href="{{ "/assets/css/my.css" | prepend: site.baseurl }}">
-	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
 	<script>
